--- a/index.html
+++ b/index.html
@@ -46,12 +46,18 @@
         <section class="advantages-main container">
             <ul class="our-advantages list">
                 <li class="our-advantages-item">
+                    <svg>
+                        <use href="./images/clock.svg" width="70" hight="70"></use>
+                    </svg>
                     <h3 class="benefits-headline">Увага до деталей</h3>
                     <p class="benefits-title">
                         Ідейні міркування, а також початок повсякденної роботи з формування позиції.
                     </p>
                 </li>
                 <li class="our-advantages-item">
+                        <svg class="icon">
+                            <use href="./images/symbol-defs.svg#icon-companylogo" width="70" hight="70"></use>
+                        </svg>
                     <h3 class="benefits-headline">Пунктуальність</h3>
                     <p class="benefits-title">
                         Завдання організації, особливо рамки і місце навчання кадрів тягне за собою.
