--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <section class="advantages-main container">
             <ul class="our-advantages list">
                 <li class="our-advantages-item">
-                    <svg>
-                        <use href="./images/clock.svg" width="70" hight="70"></use>
+                    <svg class="icon-advantages">
+                        <use href="./images/sprite.svg#icon-antenna" width="70" hight="70"></use>
                     </svg>
                     <h3 class="benefits-headline">Увага до деталей</h3>
                     <p class="benefits-title">
@@ -55,8 +55,8 @@
                     </p>
                 </li>
                 <li class="our-advantages-item">
-                        <svg class="icon">
-                            <use href="./images/symbol-defs.svg#icon-companylogo" width="70" hight="70"></use>
+                        <svg class="icon-advantages">
+                            <use href="./images/sprite.svg#icon-laptop" width="70" hight="70"></use>
                         </svg>
                     <h3 class="benefits-headline">Пунктуальність</h3>
                     <p class="benefits-title">
@@ -64,12 +64,18 @@
                     </p>
                 </li>
                 <li class="our-advantages-item">
+                    <svg class="icon-advantages">
+                        <use href="./images/sprite.svg#icon-astronaut" width="70" hight="70"></use>
+                    </svg>
                     <p class="benefits-headline">Планування</p>
                     <p class="benefits-title">
                         Так само консультація з широким активом значно обумовлює.
                     </p>
                 </li>
                 <li class="our-advantages-item">
+                    <svg class="icon-advantages">
+                        <use href="./images/sprite.svg#icon-companylogo" width="70" hight="70"></use>
+                    </svg>
                     <h3 class="benefits-headline">Сучасні технології</h3>
                     <p class="benefits-title">
                         Значимість цих проблем є настільки очевидною, що реалізація планових завдань.
