--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </li>
                 <li class="our-advantages-item">
                         <svg class="icon-advantages">
-                            <use href="./images/sprite.svg#icon-laptop" width="70" hight="70"></use>
+                            <use href="./images/sprite.svg#icon-clock" width="70" hight="70"></use>
                         </svg>
                     <h3 class="benefits-headline">Пунктуальність</h3>
                     <p class="benefits-title">
@@ -65,7 +65,7 @@
                 </li>
                 <li class="our-advantages-item">
                     <svg class="icon-advantages">
-                        <use href="./images/sprite.svg#icon-astronaut" width="70" hight="70"></use>
+                        <use href="./images/sprite.svg#icon-laptop" width="70" hight="70"></use>
                     </svg>
                     <p class="benefits-headline">Планування</p>
                     <p class="benefits-title">
@@ -74,7 +74,7 @@
                 </li>
                 <li class="our-advantages-item">
                     <svg class="icon-advantages">
-                        <use href="./images/sprite.svg#icon-companylogo" width="70" hight="70"></use>
+                        <use href="./images/sprite.svg#icon-astronaut" width="70" hight="70"></use>
                     </svg>
                     <h3 class="benefits-headline">Сучасні технології</h3>
                     <p class="benefits-title">
