--- a/index.html
+++ b/index.html
@@ -43,59 +43,63 @@
                 <button type="button" class="order-button">Замовити послугу</button>
             </div>
         </section>
-        <section class="advantages-main container">
-            <ul class="our-advantages list">
-                <li class="our-advantages-item">
-                    <svg class="icon-advantages">
-                        <use href="./images/sprite.svg#icon-antenna" width="70" hight="70"></use>
-                    </svg>
-                    <h3 class="benefits-headline">Увага до деталей</h3>
-                    <p class="benefits-title">
-                        Ідейні міркування, а також початок повсякденної роботи з формування позиції.
-                    </p>
-                </li>
-                <li class="our-advantages-item">
+        <section class="advantages-main">
+            <div class="container">
+                <ul class="our-advantages list">
+                    <li class="our-advantages-item">
                         <svg class="icon-advantages">
-                            <use href="./images/sprite.svg#icon-clock" width="70" hight="70"></use>
+                            <use href="./images/sprite.svg#icon-antenna" width="70" hight="70"></use>
                         </svg>
-                    <h3 class="benefits-headline">Пунктуальність</h3>
-                    <p class="benefits-title">
-                        Завдання організації, особливо рамки і місце навчання кадрів тягне за собою.
-                    </p>
-                </li>
-                <li class="our-advantages-item">
-                    <svg class="icon-advantages">
-                        <use href="./images/sprite.svg#icon-laptop" width="70" hight="70"></use>
-                    </svg>
-                    <p class="benefits-headline">Планування</p>
-                    <p class="benefits-title">
-                        Так само консультація з широким активом значно обумовлює.
-                    </p>
-                </li>
-                <li class="our-advantages-item">
-                    <svg class="icon-advantages">
-                        <use href="./images/sprite.svg#icon-astronaut" width="70" hight="70"></use>
-                    </svg>
-                    <h3 class="benefits-headline">Сучасні технології</h3>
-                    <p class="benefits-title">
-                        Значимість цих проблем є настільки очевидною, що реалізація планових завдань.
-                    </p>
-                </li>
-            </ul>
+                        <h3 class="benefits-headline">Увага до деталей</h3>
+                        <p class="benefits-title">
+                            Ідейні міркування, а також початок повсякденної роботи з формування позиції.
+                        </p>
+                    </li>
+                    <li class="our-advantages-item">
+                            <svg class="icon-advantages">
+                                <use href="./images/sprite.svg#icon-clock" width="70" hight="70"></use>
+                            </svg>
+                        <h3 class="benefits-headline">Пунктуальність</h3>
+                        <p class="benefits-title">
+                            Завдання організації, особливо рамки і місце навчання кадрів тягне за собою.
+                        </p>
+                    </li>
+                    <li class="our-advantages-item">
+                        <svg class="icon-advantages">
+                            <use href="./images/sprite.svg#icon-laptop" width="70" hight="70"></use>
+                        </svg>
+                        <p class="benefits-headline">Планування</p>
+                        <p class="benefits-title">
+                            Так само консультація з широким активом значно обумовлює.
+                        </p>
+                    </li>
+                    <li class="our-advantages-item">
+                        <svg class="icon-advantages">
+                            <use href="./images/sprite.svg#icon-astronaut" width="70" hight="70"></use>
+                        </svg>
+                        <h3 class="benefits-headline">Сучасні технології</h3>
+                        <p class="benefits-title">
+                            Значимість цих проблем є настільки очевидною, що реалізація планових завдань.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section class="we-doing-section container">
-            <h2 class="second-headline">Чим ми займаємося</h2>
-            <ul class="we-doing list">
-                <li class="we-doing-item">
-                    <img src="./images/example1.jpg" width="370" alt="Приклад1" class="img">
-                </li>
-                <li class="we-doing-item">
-                    <img src="./images/example2.jpg" width="370" alt="Приклад2" class="img">
-                </li>
-                <li class="we-doing-item">
-                    <img src="./images/example3.jpg" width="370" alt="Приклад3" class="img">
-                </li>
-            </ul>
+        <section class="we-doing-section">
+            <div class="container">
+                <h2 class="second-headline">Чим ми займаємося</h2>
+                <ul class="we-doing list">
+                    <li class="we-doing-item">
+                        <img src="./images/example1.jpg" width="370" alt="Приклад1" class="img">
+                    </li>
+                    <li class="we-doing-item">
+                        <img src="./images/example2.jpg" width="370" alt="Приклад2" class="img">
+                    </li>
+                    <li class="we-doing-item">
+                        <img src="./images/example3.jpg" width="370" alt="Приклад3" class="img">
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="our-team-block">
             <div class="container">
