--- a/portfolio.html
+++ b/portfolio.html
@@ -37,89 +37,91 @@
         </div>
     </header>
     <main>
-       <section class="container-portfolio container">
-            <ul class="portfolio-button-block list">
-                <li>
-                <button type="button" class="button-portfolio">Всі</button>
-                </li>
-                <li>
-                <button type="button" class="button-portfolio">Веб-сайти</button>
-                </li>
-                <li>
-                <button type="button" class="button-portfolio">Додатки</button>
-                </li>
-                <li>
-                <button type="button" class="button-portfolio">Дизайн</button>
-                </li>
-                <li>
-                <button type="button" class="button-portfolio">Маркетинг</button>
-                </li>
-            </ul>
-            <ul class="portfolio-items-block list">
-                <li class="portfolio-items-main">
-                        <img src="./images/technocrat.jpg" width="370" alt="Технокряк" class="img">
+         <section class="container-portfolio">
+            <div class="container">
+                <ul class="portfolio-button-block list">
+                    <li>
+                    <button type="button" class="button-portfolio">Всі</button>
+                    </li>
+                    <li>
+                    <button type="button" class="button-portfolio">Веб-сайти</button>
+                    </li>
+                    <li>
+                    <button type="button" class="button-portfolio">Додатки</button>
+                    </li>
+                    <li>
+                    <button type="button" class="button-portfolio">Дизайн</button>
+                    </li>
+                    <li>
+                    <button type="button" class="button-portfolio">Маркетинг</button>
+                    </li>
+                </ul>
+                <ul class="portfolio-items-block list">
+                    <li class="portfolio-items-main">
+                            <img src="./images/technocrat.jpg" width="370" alt="Технокряк" class="img">
+                            <div class="portfolio-items-text">
+                                <h3 class="portfolio-items-name">Технокряк</h3>
+                                <p class="portfolio-items">Веб-сайти</p>
+                            </div>
+                    </li>
+                    <li class="portfolio-items-main">
+                            <img src="./images/postergame.jpg" width="370" alt="Постер New Orlean vs Golden Star" class="img">
+                            <div class="portfolio-items-text">
+                                <h3 class="portfolio-items-name">Постер<span lang="en">New Orlean vs Golden Star</span></h3>
+                                <p class="portfolio-items">Дизайн</p>
+                            </div>
+                    </li>
+                    <li class="portfolio-items-main">
+                            <img src="./images/seafood.jpg" width="370" alt="Ресторан Seafood" class="img">
+                            <div class="portfolio-items-text">
+                                <h3 class="portfolio-items-name">Ресторан<span lang="en">Seafood</span></h3>
+                                <p class="portfolio-items">Додаток</p>
+                            </div>
+                    </li>
+                    <li class="portfolio-items-main">
+                        <img src="./images/prime.jpg" width="370" alt="Проект Prime" class="img">
                         <div class="portfolio-items-text">
-                            <h3 class="portfolio-items-name">Технокряк</h3>
+                            <h3 class="portfolio-items-name">Проект<span lang="en">Prime</span></h3>
+                            <p class="portfolio-items">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-items-main">
+                        <img src="./images/boxes.jpg" width="370" alt="Проект Boxes" class="img">
+                        <div class="portfolio-items-text">
+                            <h3 class="portfolio-items-name">Проект<span lang="en">Boxes</span></h3>
+                            <p class="portfolio-items">Додаток</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-items-main">
+                        <img src="./images/inspiration.jpg" width="370" alt="Inspiration has no Borders" class="img">
+                        <div class="portfolio-items-text">
+                            <h3 class="portfolio-items-name" lang="en">Inspiration has no Borders</h3>
                             <p class="portfolio-items">Веб-сайти</p>
                         </div>
-                </li>
-                <li class="portfolio-items-main">
-                        <img src="./images/postergame.jpg" width="370" alt="Постер New Orlean vs Golden Star" class="img">
+                    </li>
+                    <li class="portfolio-items-main">
+                        <img src="./images/limited.jpg" width="370" alt="Видавництво Limited Edition" class="img">
                         <div class="portfolio-items-text">
-                            <h3 class="portfolio-items-name">Постер<span lang="en">New Orlean vs Golden Star</span></h3>
+                            <h3 class="portfolio-items-name">Видавництво<span lang="en">Limited Edition</span></h3>
                             <p class="portfolio-items">Дизайн</p>
                         </div>
-                </li>
-                <li class="portfolio-items-main">
-                        <img src="./images/seafood.jpg" width="370" alt="Ресторан Seafood" class="img">
+                    </li>
+                    <li class="portfolio-items-main">
+                        <img src="./images/prime.jpg" width="370" alt="Проект LAB" class="img">
                         <div class="portfolio-items-text">
-                            <h3 class="portfolio-items-name">Ресторан<span lang="en">Seafood</span></h3>
-                            <p class="portfolio-items">Додаток</p>
+                            <h3 class="portfolio-items-name">Проект<span lang="en">LAB</span></h3>
+                            <p class="portfolio-items">Маркетинг</p>
                         </div>
-                </li>
-                <li class="portfolio-items-main">
-                    <img src="./images/prime.jpg" width="370" alt="Проект Prime" class="img">
-                    <div class="portfolio-items-text">
-                        <h3 class="portfolio-items-name">Проект<span lang="en">Prime</span></h3>
-                        <p class="portfolio-items">Маркетинг</p>
-                    </div>
-                </li>
-                <li class="portfolio-items-main">
-                    <img src="./images/boxes.jpg" width="370" alt="Проект Boxes" class="img">
-                    <div class="portfolio-items-text">
-                        <h3 class="portfolio-items-name">Проект<span lang="en">Boxes</span></h3>
-                        <p class="portfolio-items">Додаток</p>
-                    </div>
-                </li>
-                <li class="portfolio-items-main">
-                    <img src="./images/inspiration.jpg" width="370" alt="Inspiration has no Borders" class="img">
-                    <div class="portfolio-items-text">
-                        <h3 class="portfolio-items-name" lang="en">Inspiration has no Borders</h3>
-                        <p class="portfolio-items">Веб-сайти</p>
-                    </div>
-                </li>
-                <li class="portfolio-items-main">
-                    <img src="./images/limited.jpg" width="370" alt="Видавництво Limited Edition" class="img">
-                    <div class="portfolio-items-text">
-                        <h3 class="portfolio-items-name">Видавництво<span lang="en">Limited Edition</span></h3>
-                        <p class="portfolio-items">Дизайн</p>
-                    </div>
-                </li>
-                <li class="portfolio-items-main">
-                    <img src="./images/prime.jpg" width="370" alt="Проект LAB" class="img">
-                    <div class="portfolio-items-text">
-                        <h3 class="portfolio-items-name">Проект<span lang="en">LAB</span></h3>
-                        <p class="portfolio-items">Маркетинг</p>
-                    </div>
-                </li>
-                <li class="portfolio-items-main">
-                        <img src="./images/growing.jpg" width="370" alt="Growing Business" class="img">
-                        <div class="portfolio-items-text"></div>
-                            <h3 class="portfolio-items-name" lang="en">Growing Business</h3>
-                            <p class="portfolio-items">Додаток</p>
-                        </div>
-                </li>
-            </ul>
+                    </li>
+                    <li class="portfolio-items-main">
+                            <img src="./images/growing.jpg" width="370" alt="Growing Business" class="img">
+                            <div class="portfolio-items-text"></div>
+                                <h3 class="portfolio-items-name" lang="en">Growing Business</h3>
+                                <p class="portfolio-items">Додаток</p>
+                            </div>
+                    </li>
+                </ul>
+            </div>
        </section>  
     </main>
     <footer class="footer">
