--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
             <div class="container">
                 <ul class="our-advantages list">
                     <li class="our-advantages-item">
-                        <svg class="icon-advantages">
-                            <use href="./images/sprite.svg#icon-antenna" width="70" hight="70"></use>
-                        </svg>
+                        <div class="icon-box">
+                            <svg class="icon-advantages">
+                                <use href="./images/sprite.svg#icon-antenna" width="70" hight="70"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-headline">Увага до деталей</h3>
                         <p class="benefits-title">
                             Ідейні міркування, а також початок повсякденної роботи з формування позиції.
