--- a/portfolio.html
+++ b/portfolio.html
@@ -40,20 +40,20 @@
          <section class="container-portfolio">
             <div class="container">
                 <ul class="portfolio-button-block list">
-                    <li>
-                    <button type="button" class="button-portfolio">Всі</button>
+                    <li class="button-maine-portfolio">
+                        <button type="button" class="button-portfolio">Всі</button>
                     </li>
-                    <li>
-                    <button type="button" class="button-portfolio">Веб-сайти</button>
+                    <li class="button-maine-portfolio">
+                        <button type="button" class="button-portfolio">Веб-сайти</button>
                     </li>
-                    <li>
-                    <button type="button" class="button-portfolio">Додатки</button>
+                    <li class="button-maine-portfolio">
+                        <button type="button" class="button-portfolio">Додатки</button>
                     </li>
-                    <li>
-                    <button type="button" class="button-portfolio">Дизайн</button>
+                    <li class="button-maine-portfolio">
+                        <button type="button" class="button-portfolio">Дизайн</button>
                     </li>
-                    <li>
-                    <button type="button" class="button-portfolio">Маркетинг</button>
+                    <li class="button-maine-portfolio">
+                        <button type="button" class="button-portfolio">Маркетинг</button>
                     </li>
                 </ul>
                 <ul class="portfolio-items-block list">
