--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <li class="our-advantages-item">
                         <div class="icon-box">
                             <svg class="icon-advantages">
-                                <use href="./images/sprite.svg#icon-antenna" width="70" hight="70"></use>
+                                <use xlink:href="./images/sprite.svg#icon-antenna" width="70" hight="70"></use>
                             </svg>
                         </div>
                         <h3 class="benefits-headline">Увага до деталей</h3>
@@ -59,7 +59,7 @@
                     </li>
                     <li class="our-advantages-item">
                             <svg class="icon-advantages">
-                                <use href="./images/sprite.svg#icon-clock" width="70" hight="70"></use>
+                                <use xlink:href="./images/sprite.svg#icon-clock" width="70" hight="70"></use>
                             </svg>
                         <h3 class="benefits-headline">Пунктуальність</h3>
                         <p class="benefits-title">
@@ -68,7 +68,7 @@
                     </li>
                     <li class="our-advantages-item">
                         <svg class="icon-advantages">
-                            <use href="./images/sprite.svg#icon-laptop" width="70" hight="70"></use>
+                            <use xlink:href="./images/sprite.svg#icon-laptop" width="70" hight="70"></use>
                         </svg>
                         <p class="benefits-headline">Планування</p>
                         <p class="benefits-title">
@@ -77,7 +77,7 @@
                     </li>
                     <li class="our-advantages-item">
                         <svg class="icon-advantages">
-                            <use href="./images/sprite.svg#icon-astronaut" width="70" hight="70"></use>
+                            <use xlink:href="./images/sprite.svg#icon-astronaut" width="70" hight="70"></use>
                         </svg>
                         <h3 class="benefits-headline">Сучасні технології</h3>
                         <p class="benefits-title">
@@ -138,7 +138,7 @@
                 </ul>
             </div>
         </section>
-        
+
     </main>
     <footer class="footer">
         <div class="container ">
