--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             </nav>
             <ul class="site-nav list">
                 <li class="site-nav-item">
-                <svg class="icon-advantages">
+                <svg class="icon-nav">
                     <use xlink:href="./images/sprite.svg#icon-mail" width="16" hight="12"></use>
                 </svg>
                 <a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a>
                 </li>
                 <li class="site-nav-item">
-                <svg class="icon-advantages">
+                <svg class="icon-nav">
                     <use xlink:href="./images/sprite.svg#icon-phone" width="10" hight="16"></use>
                 </svg>
                 <a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a>
