--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <ul class="site-nav list">
                 <li class="site-nav-item">
                 <svg class="icon-nav">
-                    <use xlink:href="./images/sprite.svg#icon-mail" width="16" hight="12"></use>
+                    <use xlink:href="./images/sprite.svg#icon-mail" width="16px" hight="12px"></use>
                 </svg>
                 <a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a>
                 </li>
                 <li class="site-nav-item">
                 <svg class="icon-nav">
-                    <use xlink:href="./images/sprite.svg#icon-phone" width="10" hight="16"></use>
+                    <use xlink:href="./images/sprite.svg#icon-phone" width="10px" hight="16px"></use>
                 </svg>
                 <a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a>
                 </li>
@@ -55,7 +55,7 @@
                     <li class="our-advantages-item">
                         <div class="icon-box">
                             <svg class="icon-advantages">
-                                <use xlink:href="./images/sprite.svg#icon-antenna" width="70" hight="70"></use>
+                                <use xlink:href="./images/sprite.svg#icon-antenna" width="70px" hight="70px"></use>
                             </svg>
                         </div>
                         <h3 class="benefits-headline">Увага до деталей</h3>
@@ -65,7 +65,7 @@
                     </li>
                     <li class="our-advantages-item">
                             <svg class="icon-advantages">
-                                <use xlink:href="./images/sprite.svg#icon-clock" width="70" hight="70"></use>
+                                <use xlink:href="./images/sprite.svg#icon-clock" width="70px" hight="70px"></use>
                             </svg>
                         <h3 class="benefits-headline">Пунктуальність</h3>
                         <p class="benefits-title">
@@ -74,7 +74,7 @@
                     </li>
                     <li class="our-advantages-item">
                         <svg class="icon-advantages">
-                            <use xlink:href="./images/sprite.svg#icon-laptop" width="70" hight="70"></use>
+                            <use xlink:href="./images/sprite.svg#icon-laptop" width="70px" hight="70px"></use>
                         </svg>
                         <p class="benefits-headline">Планування</p>
                         <p class="benefits-title">
@@ -83,7 +83,7 @@
                     </li>
                     <li class="our-advantages-item">
                         <svg class="icon-advantages">
-                            <use xlink:href="./images/sprite.svg#icon-astronaut" width="70" hight="70"></use>
+                            <use xlink:href="./images/sprite.svg#icon-astronaut" width="70px" hight="70px"></use>
                         </svg>
                         <h3 class="benefits-headline">Сучасні технології</h3>
                         <p class="benefits-title">
