--- a/index.html
+++ b/index.html
@@ -53,38 +53,44 @@
             <div class="container">
                 <ul class="our-advantages list">
                     <li class="our-advantages-item">
-                        <div class="icon-box">
+                        <a class="icon-box">
                             <svg class="icon-advantages">
                                 <use xlink:href="./images/sprite.svg#icon-antenna" width="70px" hight="70px"></use>
                             </svg>
-                        </div>
+                        </a>
                         <h3 class="benefits-headline">Увага до деталей</h3>
                         <p class="benefits-title">
                             Ідейні міркування, а також початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
                     <li class="our-advantages-item">
+                        <a class="icon-box">
                             <svg class="icon-advantages">
                                 <use xlink:href="./images/sprite.svg#icon-clock" width="70px" hight="70px"></use>
                             </svg>
+                        </a>
                         <h3 class="benefits-headline">Пунктуальність</h3>
                         <p class="benefits-title">
                             Завдання організації, особливо рамки і місце навчання кадрів тягне за собою.
                         </p>
                     </li>
                     <li class="our-advantages-item">
-                        <svg class="icon-advantages">
-                            <use xlink:href="./images/sprite.svg#icon-laptop" width="70px" hight="70px"></use>
-                        </svg>
+                        <a class="icon-box">
+                            <svg class="icon-advantages">
+                                <use xlink:href="./images/sprite.svg#icon-laptop" width="70px" hight="70px"></use>
+                            </svg>
+                        </a>
                         <p class="benefits-headline">Планування</p>
                         <p class="benefits-title">
                             Так само консультація з широким активом значно обумовлює.
                         </p>
                     </li>
                     <li class="our-advantages-item">
-                        <svg class="icon-advantages">
-                            <use xlink:href="./images/sprite.svg#icon-astronaut" width="70px" hight="70px"></use>
-                        </svg>
+                        <a class="icon-box">
+                            <svg class="icon-advantages">
+                                <use xlink:href="./images/sprite.svg#icon-astronaut" width="70px" hight="70px"></use>
+                            </svg>
+                        </a>
                         <h3 class="benefits-headline">Сучасні технології</h3>
                         <p class="benefits-title">
                             Значимість цих проблем є настільки очевидною, що реалізація планових завдань.
