--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             </nav>
             <ul class="site-nav list">
                 <li class="site-nav-item">
-                    <svg class="icon-nav">
-                        <use xlink:href="./images/sprite.svg#icon-mail" width="16px" hight="12px"></use>
+                    <svg class="icon-nav" width="16" height="12">
+                        <use xlink:href="./images/sprite.svg#icon-mail"></use>
                     </svg>
                     <a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a>
                 </li>
                 <li class="site-nav-item">
-                    <svg class="icon-nav">
-                        <use xlink:href="./images/sprite.svg#icon-phone" width="10px" hight="16px"></use>
+                    <svg class="icon-nav" width="10" height="16">
+                        <use xlink:href="./images/sprite.svg#icon-phone"></use>
                     </svg>
                     <a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a>
                 </li>
@@ -54,8 +54,8 @@
                 <ul class="our-advantages list">
                     <li class="our-advantages-item">
                         <a class="icon-box">
-                            <svg class="icon-advantages">
-                                <use xlink:href="./images/sprite.svg#icon-antenna" width="70px" hight="70px"></use>
+                            <svg class="icon-advantages" width="70" height="70">
+                                <use xlink:href="./images/sprite.svg#icon-antenna"></use>
                             </svg>
                         </a>
                         <h3 class="benefits-headline">Увага до деталей</h3>
@@ -64,9 +64,9 @@
                         </p>
                     </li>
                     <li class="our-advantages-item">
-                        <a class="icon-box">
+                        <a class="icon-box" width="70" height="70">
                             <svg class="icon-advantages">
-                                <use xlink:href="./images/sprite.svg#icon-clock" width="70px" hight="70px"></use>
+                                <use xlink:href="./images/sprite.svg#icon-clock"></use>
                             </svg>
                         </a>
                         <h3 class="benefits-headline">Пунктуальність</h3>
@@ -76,8 +76,8 @@
                     </li>
                     <li class="our-advantages-item">
                         <a class="icon-box">
-                            <svg class="icon-advantages">
-                                <use xlink:href="./images/sprite.svg#icon-laptop" width="70px" hight="70px"></use>
+                            <svg class="icon-advantages" width="70" height="70">
+                                <use xlink:href="./images/sprite.svg#icon-laptop"></use>
                             </svg>
                         </a>
                         <p class="benefits-headline">Планування</p>
@@ -88,7 +88,7 @@
                     <li class="our-advantages-item">
                         <a class="icon-box">
                             <svg class="icon-advantages">
-                                <use xlink:href="./images/sprite.svg#icon-astronaut" width="70px" hight="70px"></use>
+                                <use xlink:href="./images/sprite.svg#icon-astronaut" width="70" height="70"></use>
                             </svg>
                         </a>
                         <h3 class="benefits-headline">Сучасні технології</h3>
