--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li class="our-advantages-item">
                         <a class="icon-box">
                             <svg class="icon-advantages" width="70" height="70">
-                                <use xlink:href="./images/sprite.svg#icon-antenna"></use>
+                                <use href="./images/sprite.svg#icon-antenna"></use>
                             </svg>
                         </a>
                         <h3 class="benefits-headline">Увага до деталей</h3>
@@ -64,9 +64,9 @@
                         </p>
                     </li>
                     <li class="our-advantages-item">
-                        <a class="icon-box" width="70" height="70">
-                            <svg class="icon-advantages">
-                                <use xlink:href="./images/sprite.svg#icon-clock"></use>
+                        <a class="icon-box">
+                            <svg class="icon-advantages" width="70" height="70">
+                                <use href="./images/sprite.svg#icon-clock"></use>
                             </svg>
                         </a>
                         <h3 class="benefits-headline">Пунктуальність</h3>
@@ -77,7 +77,7 @@
                     <li class="our-advantages-item">
                         <a class="icon-box">
                             <svg class="icon-advantages" width="70" height="70">
-                                <use xlink:href="./images/sprite.svg#icon-laptop"></use>
+                                <use href="./images/sprite.svg#icon-laptop"></use>
                             </svg>
                         </a>
                         <p class="benefits-headline">Планування</p>
@@ -87,8 +87,8 @@
                     </li>
                     <li class="our-advantages-item">
                         <a class="icon-box">
-                            <svg class="icon-advantages">
-                                <use xlink:href="./images/sprite.svg#icon-astronaut" width="70" height="70"></use>
+                            <svg class="icon-advantages" width="70" height="70">
+                                <use xlink:href="./images/sprite.svg#icon-astronaut"></use>
                             </svg>
                         </a>
                         <h3 class="benefits-headline">Сучасні технології</h3>
