--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <div class="command">
                             <h3 class="command-name">Ігор Демяненко</h3>
                             <p lang="en" class="command-name-position">Product Designer</p>
-                            <ul class="list">
+                            <ul class="icon-social-networks-ul list">
                                 <li>
                                     <a class="icon-social-networks">
                                         <svg class="icon-s-n" width="20" height="20">
