--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
                     <a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a>
                 </li>
                 <li class="site-nav-item">
-                    <svg class="icon-nav" width="10" height="16">
-                        <use xlink:href="./images/sprite.svg#icon-phone"></use>
-                    </svg>
-                    <a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a>
+                    <div class="icon-nav-hover">
+                        <svg class="icon-nav" width="10" height="16">
+                            <use xlink:href="./images/sprite.svg#icon-phone"></use>
+                        </svg>
+                        <a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a>
+                </div>
                 </li>
             </ul>
         </div>
